# EE451

./: README.md
Programming HW 1/EE 451 F 2024 PHW 1/: a.out  example.c  p1b  p1b.c  problem2  problem2.c  test.ipynb
Programming HW 1/EE 451 F 2024 PHW 1/Submission/: 3  p1a.c  p1b.c  p2  p2.c  test.py
Programming HW 1/EE 451 F 2024 PHW 1/rohit_4664493918_phw1/: makefile  p2.c
Programming HW 2/: p1a  p1a.c  p1b  p2a.c  test.ipynb
Programming HW 2/Submission/: makefile  p1a  p1b.c  p2a  p2b  p2b.c
Programming HW 3/: CMakeLists.txt
Programming HW 3/EE 451 F 2024 PHW 3/: p1b.c  p1c.c  p2b  p3a  p3a.c  p3b  p3b.c  p3c  p3c.c  report.py
Programming HW 3/EE 451 F 2024 PHW 3/Submission/: makefile  p1a.c  p3.c
Programming HW 3/EE 451 F 2024 PHW 3/test/rohit_4664493918_phw3/: p2a.c  p2b.c
Programming HW 4/EE 451 F 2024 PHW 4/: CMakeLists.txt  p1.c
Programming HW 4/EE 451 F 2024 PHW 4/Submission/: makefile  p2_1.c  p2_2.c  p2_3.c
Programming HW 4/EE 451 F 2024 PHW 4/mpi examples/: go
Programming HW 5/EE_451_F_2024_PHW_5/EE 451 F 2024 PHW 5/: p1  p2  p2.cu  vector_add  vector_add.cu
Programming HW 5/EE_451_F_2024_PHW_5/EE 451 F 2024 PHW 5/Submission/: makefile  p1.cu
Programming HW 6/EE_451_F_2024_PHW_6/EE 451 F 2024 PHW 6/: async.cu  device_properties  device_properties.cu  p1.cu  p2  p2.cu
Programming HW 6/EE_451_F_2024_PHW_6/EE 451 F 2024 PHW 6/submission/: makefile  p2.cu
